[package]
name = "morningstar"
version = "0.2.0"
authors = ["Eric Stokes"]
description = "A small library to control Morningstar solar charge controllers"
categories = ["hardware-support"]
keywords = ["solar", "morningstar", "mppt", "charge"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/morningstar"
repository = "https://github.com/estokes/morningstar-rs"

[dependencies]
libmodbus-rs = "0.8"
bitflags = "1.0"
half = "1.3"
uom = { version = "0.20", features = ["use_serde", "f32", "f64", "si", "std"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
