[package]
name = "morningstar"
version = "0.3.0"
authors = ["Eric Stokes"]
description = "A small library to control Morningstar solar charge controllers"
categories = ["hardware-support"]
keywords = ["solar", "morningstar", "hardware"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/morningstar"
repository = "https://github.com/estokes/morningstar-rs"
edition = "2018"

[dependencies]
futures = "0.3"
tokio-serial = "4.3"
tokio-modbus = { version = "0.4", default-features = false, features = ["rtu"] }
tokio = { version = "0.2", features = ["rt-core"] }
bitflags = "1.2"
half = "1.6"
uom = { version = "0.28", features = ["use_serde", "f32", "f64", "si", "std"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
anyhow = "1"
