[package]
name = "morningstar"
version = "0.4.1"
authors = ["Eric Stokes"]
description = "A small library to control Morningstar solar charge controllers"
categories = ["hardware-support"]
keywords = ["solar", "morningstar", "hardware"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/morningstar"
repository = "https://github.com/estokes/morningstar-rs"
edition = "2018"

[dependencies]
futures = "0.3"
tokio-serial = "5"
tokio-modbus = { version = "0.5", default-features = false, features = ["rtu"] }
tokio = { version = "1", features = ["rt"] }
bitflags = "1.3"
half = "1.6"
uom = { version = "0.32", features = ["use_serde", "f32", "f64", "si", "std"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
anyhow = "1"
